--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "version": "2.0.0",
   "main": "electron/main.js",
-  "description": "Sistema de controle de produção CRS Vision",
+  "description": "Sistema de controle de produção CRS Vision - Versão Desktop",
   "author": "CRS Vision",
   "homepage": "./",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "server": "node server/index.js",
     "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
     "electron:build": "vite build && electron-builder",
     "dist": "npm run electron:build",
@@ -24,7 +25,11 @@
     },
     "files": [
       "dist/**/*",
-      "electron/**/*"
+      "electron/**/*",
+      "server/**/*"
+    ],
+    "asarUnpack": [
+      "server/**"
     ],
     "win": {
       "target": "nsis",
@@ -40,25 +45,29 @@
     }
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lucide-react": "^0.294.0",
-    "date-fns": "^2.30.0",
-    "idb": "^7.1.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "lucide-react": "^0.460.0",
+    "date-fns": "^3.6.0",
+    "idb": "^8.0.0",
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "ip": "^2.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react": "^4.2.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0",
-    "electron": "^28.0.0",
-    "electron-builder": "^24.9.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.1",
+    "electron": "^31.0.0",
+    "electron-builder": "^24.13.3",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "wait-on": "^7.2.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4"
   }
 }
